[package]
name = "rust_midi_sampler"
version = "0.1.0"
authors = ["onno204 <15333546+onno204@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.7.0"
midi-control = "0.2.0"
app_dirs = "1.2.1"
lazy_static = "1.4.0"
